syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.sp.warehouse";

service UserService {
  // Request User existence
  rpc GetUserExists (ExistsUserIdRequest) returns (ExistsUserIdResponse);
}

// Request contains a user id
message ExistsUserIdRequest {
  string userId = 1;  // UUIDs as strings
}

// Response contains existence of user
message ExistsUserIdResponse {
  bool exists = 1;
}
